Passando Primeiros valores para View

--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -5,6 +5,21 @@
 		<title>Django Projetinho</title>
 	</head>
 	<body>
-		<h1>Hello World!</h1>
+		<ul>
+			{% for language in languages %}
+			
+			{% if language == 'PHP' %}
+				<B>{{language}}</B>
+			{%else%}
+				<i>{{language}}</i>
+			{%endif%}
+			{% endfor %}
+		</ul>
+			<ul>
+			{% for name in names %}
+			<li>{{name}}</li>
+			{% endfor %}
+		</ul>
+
 	</body>
 </html>
