Gravando Registro Relacionado + HasOne Nativo do Django (Coisa mais Facil)

--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -10,6 +10,8 @@
 				<li>{{category.name}}</li>
 			{%endfor%}
 		</ul>
-
+		<hr>
+		<!-- Ele faz os hasone e hasmany nativamente -->
+		<h2>{{post.name}} - {{post.category.name}}</h2>
 	</body>
 </html>
