--- a/templates/home/welcome.html
+++ b/templates/home/welcome.html
@@ -1,10 +1,12 @@
 <!doctype html>
 	<html lang="pt">
 	<head>
+		<link rel="stylesheet" href="http://localhost/django/templates/assets/css/bootstrap.min.css">
+		
 		<meta charset="utf-8">
 		<title>Django</title>
 	</head>
 	<body>
-
+		
 	</body>
 </html>
